Use static valueOf instead